# ai-landscape-digest

./: .gitignore  CHANGELOG.md  CLOUD_MODE.md  LICENSE  Makefile  README.md  config.cloud.example.yaml  config.example.yaml  digest.py  digests.json  fetch_feeds.py  generate_digest.py  pyproject.toml  pytest.ini  requirements.txt  seen_items.json  wakeup.sh
.github/: ci-state-README.md
.github/workflows/: digest.yml  reset.yml
ai_digest/: __init__.py  __main__.py  app.py  cli.py  constants.py  doctor.py  feeds.py  installers.py  paths.py  prompts.py  settings.py
ai_digest/adapters/: __init__.py  notifiers.py  triggers.py
docs/: digests.json  index.html  latest.txt
eval/: eval_models.py
tests/: __init__.py  test_integration.py  test_unit.py
