[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-landscape-digest"
version = "0.3.7"
requires-python = ">=3.9"
dependencies = ["feedparser", "pyyaml"]

[project.scripts]
ai-digest = "ai_digest.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_digest*"]
